--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>If you want your website to not be flooded by requests, you can set a delay before preloading starts when a user hovers a link. It will still <a href="http://www.nngroup.com/articles/response-times-3-important-limits/" title="Jakob Nielsen – Response Times: The 3 Important Limits" target="_blank">feel instant</a>.
 
-<p>If you really don’t want any wasted request, you may preload on “mousedown”. This is when you press your mouse button (a click is when you release it).
+<p>If you don’t want any wasted request, you may preload on “mousedown”. This is when you press your mouse button (a click is when you release it).
 
 <hr>
 
@@ -40,7 +40,7 @@
 
 <p>Ajax brings two nice benefits in and of itself:
 <ul>
-  <li>Your browser doesn’t have to throw and recalculate styles and scripts every time you go to another page.
+  <li>Your browser doesn’t have to throw and recompile scripts and styles on each page change anymore.
   <li>You don’t get a white flash while your browser is waiting for a page to display, making your website <em>feel</em> faster.
 </ul>
 
