--- a/start.html
+++ b/start.html
@@ -26,7 +26,7 @@
     <td><a href="https://raw.github.com/dieulot/instantclick/v2.1/instantclick.js" class="btn" download>Development version<br><small>Full sources, 10.4kb</small></a>
 </table>
 
-<p class="warning"><strong>Upgrading from 2.0?</strong> Starting with 2.1 blacklisting is now the default, see <a href="#blacklisting">Blacklisting (or whitelisting) links</a>.
+<p class="warning"><strong>Upgrading from 2.0?</strong> Starting with 2.1 blacklisting is now <a href="#blacklisting">the default</a>.
 
 <h3 id="preloading">Preloading</h3>
 
